[package]
name = "retadi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
qrcode = "0.14"
image = "0.25"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
local-ip-address = "0.6"
